<resources>
    <string name="app_name">MoneySplitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textBenvinguda">Hola,</string>
    <string name="newsTextViewTxt">Novedades</string>
    <string name="btnNuevosGastosTxt">Gastos nuevos</string>
    <string name="btnNewGroupsTxt">Grupos nuevos</string>
    <string name="btnPagosPendientesTxt">Pagos pendientes</string>
    <string name="btnPagosRecibirTxt">Pagos por recibir</string>
    <string name="searchbarHint">Introduce tu búsqueda</string>
    <string name="button">Button</string>
    <string name="btnAddNewGroupTxt">Create new group</string>
    <string name="textVerificacio">Introduce el código de confirmación que has recibido por SMS:</string>
    <string name="btnConfirmarTxt">Confirmar</string>
    <string name="newImageButtonTxt">Nueva imagen de perfil</string>
    <string name="textPassword">Contraseña:</string>
    <string name="contraseñaButtonTxt">Cambiar contraseña</string>
    <string name="textNotificaciones">Notificaciones:</string>
    <string name="notificacionesButtonTxt">Desactivar notificaciones</string>
    <string name="textCuenta">Cuenta:</string>
    <string name="closeButtonTxt">Cerrar sesión</string>
    <string name="eliminateButtonTxt">Eliminar cuenta</string>
    <string name="imageButtonHouseTxt">Returns to home</string>
    <string name="groupImageViewTxt">Imagen de cosas</string>
    <string name="groupNameText">Grupo 1</string>
    <string name="groupDescText">Texto de apoyo</string>
    <string name="saldarDeudasButtonTxt">Saldar Deudas</string>
    <string name="showBalanceButtonTxt">Balance</string>
    <string name="showBillsButtonTxt">Gastos</string>
    <string name="Tel_Email_IDtxt">Teléfono:</string>
    <string name="buttonAccederTxt">Acceder</string>
    <string name="introText">La mejor APP de gestión de pagos del mercado</string>
    <string name="terminosButton">Descargar Términos y Condiciones</string>
    <string name="registerButtonTxt">Registrarse</string>
    <string name="terminosAcceptText">Al continuar, estás aceptando los Términos y Condiciones</string>
    <string name="textNombreGrupo">Nombre del grupo:</string>
    <string name="textDescGrupo">Descripción:</string>
    <string name="textImagenGrupo">Seleccionar imagen del grupo:</string>
    <string name="addGroupImageButtonTxt">Pulsa para añadir una imagen</string>
    <string name="textMiembros">Miembros:</string>
    <string name="buttonNewGroupTxt">Crear</string>
    <string name="nomApellidosTxt">Nombre Apellidos</string>
    <string name="idText">ID Usuario</string>
    <string name="editProfileButtonTxt">Editar perfil</string>
    <string name="textTelefono">Número de teléfono:</string>
    <string name="textPrefijo">Prefijo:</string>
    <string name="textRepetirContraseña">Repetir contraseña:</string>
    <string name="textInstruccionesContraseña">Mínimo 8 carácteres, una mayúscula, una minúscula y un número.</string>
    <string name="textCorreoElectronico">Correo electrónico:</string>
    <string name="textApellidos">Apellidos:</string>
    <string name="textNombre">Nombre:</string>
    <string name="billPriceText">X€</string>
    <string name="groupDateTxt">00/00/0000</string>
    <string name="textIniciPayments">Histórico de pagos</string>
    <string name="textIniciExpenses">Histórico de gastos</string>
    <string name="paymentImatgeTxt">Pago enviado o recibido</string>
    <string name="PersomaNameText">Nombre Persona</string>
    <string name="DateTxt">00/00/0000</string>
    <string name="QuantityNegativeText">-X€</string>
    <string name="QuantityPositiveText">+X€</string>
    <string name="ContextText">Nom despesa</string>
    <string name="textGrupo">Grupo</string>
    <string name="ListadoGastosTxt">Listado de gastos</string>
    <string name="AnalisisGlobalTxt">Análisis global</string>
    <string name="informe_de_gastos">Informe de gastos:</string>
    <string name="ver_hist_rico_de_gastos">Ver histórico de gastos</string>
    <string name="informe_de_pagos">Informe de pagos:</string>
    <string name="ver_hist_rico_de_pagos">Ver histórico de pagos</string>
    <string name="https_web_ub_edu_es">https://web.ub.edu/es/</string>
    <string name="apoya_nuestro_proyecto">Apoya nuestro proyecto:</string>
    <string name="cambiar">Cambiar</string>
    <string name="contrasenya_actual">Contraseña actual:</string>
</resources>