<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditActivityProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".view.EditProfileActivity">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back"
        android:scaleType="fitCenter" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="#FAFAFA"
        app:cardCornerRadius="100dp"
        app:cardPreventCornerOverlap="true"
        app:strokeColor="@color/dark_blue"
        app:strokeWidth="4dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile_logo" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/newImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners_weak"
        app:backgroundTint="@null"
        android:text="@string/newImageButtonTxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:labelFor="@id/editTextNombre"
        android:text="@string/textPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/contraseñaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_weak"
        app:backgroundTint="@null"
        android:text="@string/contraseñaButtonTxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textNotificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:labelFor="@id/editTextNombre"
        android:text="@string/textNotificaciones"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/notificacionesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_weak"
        app:backgroundTint="@null"
        android:text="@string/notificacionesButtonTxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:labelFor="@id/editTextNombre"
        android:text="@string/textCuenta"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_weak"
        app:backgroundTint="@null"
        android:text="@string/closeButtonTxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/eliminateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_strong"
        app:backgroundTint="@null"
        android:text="@string/eliminateButtonTxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>