<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".view.ProfileActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonHome"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/house_logo"
                android:scaleType="fitCenter" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#FAFAFA"
                app:cardCornerRadius="100dp"
                app:cardPreventCornerOverlap="true"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="4dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/profile_logo" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/nomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/nomApellidosTxt"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/idText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corners_weak"
                app:backgroundTint="@null"
                android:text="@string/editProfileButtonTxt"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textCorreu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:text="@string/textCorreoElectronico"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/correu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners_plain_text"
                android:padding="8sp"/>

            <TextView
                android:id="@+id/textTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:text="@string/textTelefono"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/telefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners_plain_text"
                android:padding="8sp"/>


            <TextView
                android:id="@+id/textGastos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informe_de_gastos"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonGastos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_hist_rico_de_gastos"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textSize="16sp"
                android:background="@drawable/rounded_corners_weak"
                app:backgroundTint="@null"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/textPagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informe_de_pagos"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonPagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_hist_rico_de_pagos"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textSize="16sp"
                android:background="@drawable/rounded_corners_weak"
                app:backgroundTint="@null"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/textApoyar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apoya_nuestro_proyecto"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonApoyar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/https_web_ub_edu_es"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="16sp"
                android:background="@drawable/rounded_corners_weak"
                app:backgroundTint="@null"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>