<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityChangePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".view.ChangePasswordActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:text="@string/contrasenya_actual"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_plain_text"
        android:textColor="#000000"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textNewContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/textInstruccionesContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textInstruccionesContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMiembros"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/editTextNewContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_plain_text"
        android:ems="10"
        android:textColor="#000000"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textRepetirContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textRepetirContraseña"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/editTextRepetirContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_plain_text"
        android:textColor="#000000"
        android:padding="10dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/buttonCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners_strong"
        app:backgroundTint="@null"
        android:text="@string/cambiar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>
</LinearLayout>
