<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"

        android:orientation="horizontal">

        <!-- Media -->
        <ImageView
            android:id="@+id/groupDescTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_2dp_no_fill"
            android:contentDescription="@string/groupImageViewTxt"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/groupNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupNameText"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                android:ellipsize="marquee"
                android:maxLines="1"/>


            <TextView
                android:id="@+id/groupDescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/groupDescText"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#E6000000"
                app:autoSizeTextType="uniform"
                android:ellipsize="marquee"
                android:maxLines="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/groupDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="0dp"
                android:text="@string/groupDateTxt"
                android:textAlignment="textEnd"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="#CC000000"
                android:textSize="12sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>