<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <!-- Enviat:  pago_enviado    Rebut: pago_recibido-->
        <ImageView
            android:id="@+id/pagoView"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_2dp_no_fill"
            android:contentDescription="@string/paymentImatgeTxt"
            android:scaleType="centerCrop"
             />

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/PersonaNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/PersomaNameText"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#000000"
                android:textSize="16dp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/DateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/DateTxt"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#000000"
                android:textSize="16dp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Color vermell:FF2222      Color verd:87D37C -->
            <TextView
                android:id="@+id/QuantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/QuantityNegativeText"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#FF2222"
                android:textSize="16dp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>